app/assets/stylesheets/components/about/c-modal-profile.scss
.c-modal-profile {
  display: flex;
  flex-direction: column;
  width: calc(100% - #{$wrapper-padding-mobile * 2});
  height: 100%;
  margin: $wrapper-padding-mobile auto 0;
  padding: $wrapper-padding-mobile;
  background-color: $color-4;

  @media #{$mq-tablet} {
    flex-direction: row;
    flex-wrap: wrap;
    width: auto;
    height: auto;
    margin: 0;
    padding: 0;
  }

  > .member-picture {
    display: none;

    @media #{$mq-tablet} {
      display: inline-block;
      width: 340px;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
    }
  }

  > .member-info {
    display: flex;
    position: relative;
    flex-direction: column;
    height: 100%;
    overflow: hidden;

    @media #{$mq-tablet} {
      width: calc(100% - 340px);
      padding: 35px 45px 0;
    }
  }

  > .member-info > .member-position {
    margin: 15px 0 25px;
  }

  > .member-info > .scroll-container {
    display: flex;
    position: relative;
    flex-grow: 1;
    align-items: stretch;
    overflow: hidden;

    &::before,
    &::after {
      display: inline-block;
      position: absolute;

      left: 0;
      width: 100%;
      height: 25px;

      content: '';
      z-index: 1;
    }

    &::before {
      top: 0;
      background-image: linear-gradient(to top, rgba($color-4, 0), $color-4);
    }

    &::after {
      bottom: 0;
      background-image: linear-gradient(to bottom, rgba($color-4, 0), $color-4);
    }

    > .content {
      padding: 25px 0;
      overflow-y: auto;
      -webkit-overflow-scrolling: touch;

      @media #{$mq-tablet} {
        max-height: 400px;
      }
    }

    .blogs {
      margin-top: 15px;

      .blog-link-list {
        > .blog-link {
          margin-top: 10px;
          display: block;

          > a {
            color: $color-1;
          }
        }
      }
    }

  }

  & + .modal-footer {
    justify-content: flex-end !important;
  }
}

